--- a/index.html
+++ b/index.html
@@ -448,8 +448,8 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
-          <svg class="modal-icon" width="30" height="30">
-            <use href="./img/symbol-defs.svg#icon-close"></use>
+          <svg class="modal-icon" width="11" height="11">
+            <use href="./img/symbol-defs.svg#icon-Vector"></use>
           </svg>
         </button>
       </div>
